# template-python

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .test.env  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: checks.yml  pr.yml  release.yml  tests.yml
src/replace_me/: __init__.py
src/template_python/: __init__.py  cli.py
src/template_python/helpers/: cfg.py
tests/: conftest.py  test_cli.py  test_example.py  test_replace_me.py
