[tool.poetry]
authors = ["replace-me"]
description = "replace-me"
name = "replace-me"
readme = "README.md"
version = "1.3.2"
repository = "https://github.com/agblox/replace-me"
documentation = "https://github.com/agblox/replace-me"
homepage = "https://github.com/agblox/replace-me"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

# dev deps
pytest = { version = "^6.1.1", optional = true }
pytest-cov =  { version = "^2.10.1", optional = true }
pytest-dotenv = { version = "^0.5.2", optional = true }
mypy = { version = "^0.910", optional = true }
detect-secrets = {version = "^1.1.0", extras = ["dev"]}

# package deps


[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "pytest-dotenv", "mypy"]

[tool.poetry.urls]
issues = "https://github.com/agblox/replace-me"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): {version} [skip actions]"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.10"]
