[tool.poetry]
authors = ["template-python"]
description = "Python package template"
name = "template-python"
readme = "README.md"
version = "1.3.4"
repository = "https://github.com/agblox/template-python"
documentation = "https://github.com/agblox/template-python"
homepage = "https://github.com/agblox/template-python"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

# dev deps
detect-secrets = { version = "^1.1.0", optional = true }
pytest = { version = "^6.1.1", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
pytest-dotenv = { version = "^0.5.2", optional = true }

mypy = { version = "^0.931", optional = true }

# package deps


[tool.poetry.extras]
dev = [
    "detect-secrets",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "mypy",
]

[tool.poetry.urls]
issues = "https://github.com/agblox/template-python"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): {version} [skip actions]"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.10"]
