[tool.poetry]
authors = ["DiviAI"]
description = "Python package template"
name = "template-python"
readme = "README.md"
version = "1.5.1"
repository = "https://github.com/agblox/template-python"
documentation = "https://github.com/agblox/template-python"
homepage = "https://github.com/agblox/template-python"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    # PyPI will always reject packages with classifiers beginning with "Private ::"
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# dev deps
detect-secrets = { version = "^1.4.0", optional = true }
pytest = { version = "^7.2.2", optional = true }
pytest-cov = { version = "^4.0.0", optional = true }
pytest-dotenv = { version = "^0.5.2", optional = true }

mypy = { version = "^1.1.1", optional = true }

# package deps
typer = "^0.7.0"
loguru = "^0.6.0"

[tool.poetry.scripts]
template-python = "template_python:cli.cli"

[tool.poetry.extras]
dev = [
    "detect-secrets",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "mypy",
]

[tool.poetry.urls]
issues = "https://github.com/agblox/template-python"

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true
order_by_type = false
line_length = 100

[tool.black]
line-length = 100
target-version = ['py39']

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
version_pattern = [
    "Makefile:^VERSION := {version}",
]

upload_to_pypi = false
dist_path = "dist/"
build_command = "make build-assets"
commit_subject = "chore(release): {version} [skip actions]"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.10"]
